--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./FlashCards1.apk"
+export_path="../FlashCards1.apk"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -198,7 +198,7 @@ permissions/uninstall_shortcut=false
 permissions/update_device_stats=false
 permissions/use_credentials=false
 permissions/use_sip=false
-permissions/vibrate=false
+permissions/vibrate=true
 permissions/wake_lock=false
 permissions/write_apn_settings=false
 permissions/write_calendar=false
